# search_transcripts

./: .gitignore  README.md  helper.py  pyproject.toml  search_transcripts.py  utils.py
src/search_transcripts/: __init__.py
