#none of this probably is right yet

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "search-transcripts"
description = 'Convert a folder of transcripts to a searchable database'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Marcos Huerta", email = "marcos@marcoshuerta.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["pandas","numpy","nltk"]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/astrowonk/search_transcripts/#readme"
Issues = "https://github.com/astrowonk/search_transcripts/issues"
Source = "https://github.com/astrowonk/search_transcripts"

[tool.hatch.version]
path = "search_transcripts/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=search_transcripts --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "search_transcripts/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
